[gd_scene load_steps=8 format=3 uid="uid://c18c8eabeyvx4"]

[ext_resource type="Script" path="res://scripts/sorceror.gd" id="1_dg34c"]
[ext_resource type="PackedScene" uid="uid://dhn02lihkc3t3" path="res://blends/sorcerer.blend" id="2_3qefy"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ci6cm"]
size = Vector3(1, 2, 1)

[sub_resource type="SphereShape3D" id="SphereShape3D_ii623"]
radius = 7.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n3434"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xgote"]
bg_color = Color(0.501961, 0, 0, 1)

[sub_resource type="ViewportTexture" id="ViewportTexture_kf2c5"]
viewport_path = NodePath("SubViewport")

[node name="Sorceror" type="CharacterBody3D"]
collision_mask = 3
script = ExtResource("1_dg34c")

[node name="Model" parent="." instance=ExtResource("2_3qefy")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("BoxShape3D_ci6cm")

[node name="DetectionArea" type="Area3D" parent="."]
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionArea"]
shape = SubResource("SphereShape3D_ii623")

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(175, 25)

[node name="HealthBar" type="ProgressBar" parent="SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_n3434")
theme_override_styles/fill = SubResource("StyleBoxFlat_xgote")
show_percentage = false

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)
texture_filter = 0
texture = SubResource("ViewportTexture_kf2c5")

[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]

[editable path="Model"]
